Add online users

--- a/SignalRCourse/Views/Shared/_Layout.cshtml
+++ b/SignalRCourse/Views/Shared/_Layout.cshtml
@@ -25,8 +25,14 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @{
+        if (User.Identity.IsAuthenticated)
+        {
+            <script src="~/js/chat.js"></script>
+        }
+    }
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
