--- a/SignalRCourse/Views/Home/Views.cshtml
+++ b/SignalRCourse/Views/Home/Views.cshtml
@@ -19,6 +19,6 @@
 
 
 @section Scripts{
-    <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
+    <script src="~/js/chat.js"></script>
     <script src="~/js/viewscounter.js"></script>
 }
